--- a/css/about.css
+++ b/css/about.css
@@ -2,14 +2,23 @@ section {
 	display: flex;
 	flex-direction: row;
 
-	& > * {
+	& div {
 		margin: 0 1rem;
-		width: 50%;
 	}
 
 	& img {
 		border-radius: 2rem;
+		min-width: 50%;
+		height: auto;
 	}
+}
 
+@media only screen and (max-width: 1000px) {
+	section {
+		flex-direction: column;
 
+		& div {
+			margin-bottom: 2rem;
+		}
+	}
 }
