--- a/css/services.css
+++ b/css/services.css
@@ -1,9 +1,14 @@
 section {
 	display: flex;
 	flex-direction: row;
+	min-width: 50%;
 
 	& div {
-		width: 50%;
+		display: flex;
+		flex-direction: column;
+		min-width: 50%;
+
+		text-align: center;
 
 		& a {
 			text-decoration: none;
@@ -17,7 +22,17 @@ section {
 
 img {
 	border-radius: 1rem;
-	height: 20rem;
+	max-height: 20rem;
+	max-width: 100%;
 }
 
+@media only screen and (max-width: 1000px) {
+	section {
+		flex-direction: column;
 
+		& div {
+			margin: auto;
+			margin-bottom: 2rem;
+		}
+	}
+}
